logo looks like a dot on small screen UI fix

--- a/client/app/components/ApplicationArea/ApplicationLayout/DesktopNavbar.less
+++ b/client/app/components/ApplicationArea/ApplicationLayout/DesktopNavbar.less
@@ -152,9 +152,9 @@
     padding: 0;
     margin: 0;
     img {
-      margin: -6px 18px 0 7px;
-      height: 26px !important;
-      width: 25px;
+      margin: -6px 8px 0 0;
+      height: 40px !important;
+      width: 40px;
       cursor: pointer;
     }
   }
